Add more comments to osd notebook

--- a/out_of_sample_detection/Diving_deeper_osd.ipynb
+++ b/out_of_sample_detection/Diving_deeper_osd.ipynb
@@ -390,6 +390,14 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Visualize "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 14,
    "metadata": {},
@@ -403,6 +411,18 @@
     "train_embedding = embedding[:train_feature_embeddings.shape[0],:]\n",
     "eval_embedding = embedding[train_feature_embeddings.shape[0]:,:]"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "code",
@@ -421,6 +441,7 @@
     }
    ],
    "source": [
+    "# Create visualizations of the distributions\n",
     "def add_color_bars(fig, ax, ims):\n",
     "    divider = make_axes_locatable(ax)\n",
     "    first = True\n",
