Add final headers to osd

--- a/out_of_sample_detection/Diving_deeper_osd.ipynb
+++ b/out_of_sample_detection/Diving_deeper_osd.ipynb
@@ -336,6 +336,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Step 6: Show least and most out of sample images"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## IN SAMPLE!"
    ]
   },
@@ -394,7 +402,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Visualize "
+    "## Step 7: Visualize distributions"
    ]
   },
   {
@@ -411,18 +419,6 @@
     "train_embedding = embedding[:train_feature_embeddings.shape[0],:]\n",
     "eval_embedding = embedding[train_feature_embeddings.shape[0]:,:]"
    ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   },
   {
    "cell_type": "code",
@@ -481,6 +477,14 @@
     "axes[2].legend(loc='upper left')\n",
     "\n",
     "plt.show()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Step 8: Save the scores to csv"
    ]
   },
   {
